<resources>
    <string name="app_name">Urgan</string>
    <string name="hint_email">E-posta Adresi</string>
    <string name="hint_sifre">Parola</string>
    <string name="error_email_match">Bu e-posta adresi ve parola kombinasyonu bulunamadı.</string>
    <string name="error_email_kullaniliyor">Bu e-posta adresi sistemde zaten kayıtlı.</string>
    <string name="error_hatali_veri">Hatalı veri</string>
    <string name="error_unknown">Bilinmeyen bir hata oluştu.</string>
    <string name="error_no_connection">Bağlantı yok.</string>
    <string name="info_kayit_basarili">Hesap başarıyla oluşturuldu.</string>
    <string name="str_giris_yap">Giriş Yap</string>
    <string name="str_hesap_yok">Hesabınız Yok Mu?</string>
    <string name="str_hesap_ac">Hesap Oluştur</string>
    <string name="str_parola_unuttum"><u>Parolamı unuttum</u></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Urgan Oturum</string>
    <string name="nav_acc_level">Hesap Seviyesi</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ayarlar</string>
    <string name="action_filter">Filtrele...</string>
    <string name="action_filter_clear">Filtreyi Kaldır</string>
    <string name="title_filtre">Filtre Uygula</string>
    <string name="content_filtre">Görmek istediğiniz tagları seçin.</string>
    <string name="nav_uygulama">Uygulama</string>
    <string name="nav_taglar">Taglar</string>
    <string name="nav_logoff">Oturumu Kapat</string>
    <string name="nav_ayarlar">Ayarlar</string>
    <string name="nav_share">Uygulamayı Paylaş</string>
    <string name="title_home">Ambar</string> <!-- Bu isim daha cok degisir.................... -->
    <string name="title_activity_main">Ambar</string>
    <string name="title_activity_ayarlar">Ayarlar</string>
    <string name="title_activity_taglar">Taglar</string>
    <string name="title_urgan_share">Yükleme Ekranı</string>
    <string name="prompt_oturum_kapat">Oturum kapatılsın mı?</string>
    <string name="prompt_hesap_ac">Bu e-posta adresi kullanılarak hesap oluşturulsun mu?</string>
    <string name="prompt_success">İşlem başarıyla tamamlandı.</string>
    <string name="prompt_fail">İşlem başarısız oldu.</string>
    <string name="prompt_yanit_bekleniyor">Sunucudan veriler alınıyor.</string>
    <string name="prompt_sunucuya_yukleniyor">Veriler sunucuya aktarılıyor.</string>
    <string name="prompt_tag_sec">Eklemek istediğiniz tagları seçin.</string>
    <string name="tag_ekle_isim">Yeni tagınız için bir isim belirleyin.</string>
    <string name="taglari_sec">Tagları Seç</string>
    <string name="evet">Evet</string>
    <string name="hayir">Hayır</string>
    <string name="ok">Tamam</string>
    <string name="yukle">Yükle</string>
    <string name="iptal">İptal</string>
    <string name="sil">Sil</string>
    <string name="yeniden_adlandir">Yeniden Adlandır</string>
    <string name="prompt_enter_new_tag_name">Tagınız için yeni bir isim girin.</string>
    <string name="prompt_enter_new_title">Yeni bir başlık girin.</string>
    <string name="prompt_enter_new_content">Yeni bir içerik girin.</string>
    <string name="prompt_enter_new_unknown">Yeni bir değer girin.</string>
    <string name="prompt_delete_tag">Tag silinsin mi?</string>
    <string name="prompt_delete_entry">Öğe silinsin mi? Bu işlem geri alınamaz.</string>
    <string name="baslik_degistir">Başlığı değiştir</string>
    <string name="icerik_degistir">İçeriği değiştir</string>
    <string name="taglari_degistir">Tagları değiştir</string>
    <string name="title">Başlık</string>
    <string name="content">İçerik</string>
    <string name="link">Adres</string>
    <string name="tip">Tip</string>
    <string name="dosya">Görüntü</string>
    <string name="pick">Seç</string>
    <string name="tag_empty">Henüz hiç bir tagınız yok gibi görünüyor.</string>
    <string name="entry_empty">Henüz hiç bir öğeniz yok.</string>
    <string name="entry_empty_with_filter">Bu filtreye uygun öğe yok.</string>
    <string name="tag_name_not">Notlar</string>
    <string name="tag_name_link">Bağlantılar</string>
    <string name="tag_name_img">Görüntüler</string>
    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
</resources>
