<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_tag"
        android:icon="@drawable/ic_tag"
        android:title="@string/nav_taglar" />
    <item
        android:id="@+id/nav_ayarlar"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/nav_ayarlar"
        android:visible="false" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/nav_share"
        android:visible="false" />
    <item
        android:id="@+id/nav_logoff"
        android:icon="@drawable/ic_exit"
        android:title="@string/nav_logoff" />
    </group>

</menu>
