<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_exit_session"
        android:orderInCategory="3"
        android:title="@string/nav_logoff"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_filtre"
        android:orderInCategory="0"
        android:title="@string/action_filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filtre_temizle"
        android:orderInCategory="1"
        android:title="@string/action_filter_clear"
        app:showAsAction="never" />
</menu>
