<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/urgan_bg3"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="true"
            android:fontFamily="@font/quicksandlight"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="75sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/text_login_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_email_match"
                android:textAlignment="center"
                android:textColor="@color/error"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text_register_success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_kayit_basarili"
                android:textAlignment="center"
                android:textColor="@color/platin"/>

            <ProgressBar
                android:id="@+id/progress_giris"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:indeterminateTint="#FFFFFF"
                android:visibility="visible" />
        </FrameLayout>

        <EditText
            android:id="@+id/inputMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/input_style"
            android:drawableLeft="@drawable/ic_account_tr"
            android:drawablePadding="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress|textAutoCorrect"
            android:minHeight="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/input_color_basic" />

        <EditText
            android:id="@+id/inputSifre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/input_style"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:drawablePadding="10dp"
            android:hint="@string/hint_sifre"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/input_color_basic" />

        <TextView
            android:id="@+id/parolamiUnuttum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:text="@string/str_parola_unuttum"
            android:textAlignment="textStart"
            android:textColor="@color/input_color_basic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_kayit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/str_hesap_ac"
                android:textColor="@color/input_color_basic" />

            <Button
                android:id="@+id/button_giris"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:background="@drawable/button_style"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/str_giris_yap"
                android:textColor="@color/input_color_basic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom | center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/button_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:padding="3dp"
                android:src="@drawable/ic_qr_tara" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>