<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".UploadActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/urgan_bg3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksandregular"
            android:text="@string/app_name"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksandregular"
            android:paddingTop="50dp"
            android:text="@string/title_urgan_share"
            android:textSize="14sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="40dp"
        android:paddingEnd="20dp"
        android:paddingBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/quicksandregular"
                android:text="@string/tip"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_upload_tipler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@drawable/input_style"
                android:padding="5dp"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/quicksandregular"
                android:text="@string/title"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/input_upload_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@drawable/input_style"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_upload_icerik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:weightSum="10">

            <TextView
                android:id="@+id/text_upload_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/quicksandregular"
                android:text="@string/content"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/input_upload_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@drawable/input_style"
                android:inputType="textCapSentences"
                android:padding="5dp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_upload_goruntu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:fontFamily="@font/quicksandregular"
                android:text="@string/dosya"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_upload_pick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_weight="5"
                android:background="@drawable/button_style"
                android:drawableStart="@drawable/ic_attach"
                android:fontFamily="@font/quicksandregular"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/pick"
                android:textAlignment="textStart" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_upload_pick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksandregular"
            android:paddingTop="5dp"
            android:textAlignment="textEnd"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button_upload_tag_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/button_style"
            android:fontFamily="@font/quicksandregular"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/taglari_sec" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            android:weightSum="10">

            <Button
                android:id="@+id/button_upload_iptal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="5"
                android:background="@drawable/button_style"
                android:fontFamily="@font/quicksandregular"
                android:text="@string/iptal" />

            <Button
                android:id="@+id/button_upload_yukle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="5"
                android:background="@drawable/button_style"
                android:fontFamily="@font/quicksandregular"
                android:text="@string/yukle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>